# AvprilEngine

./: CHUNKs.txt  Cargo.toml
src/: main.rs
src/engine/: fbx_scene.rs  info_debug.rs  mod.rs  on_game.rs  player_controller.rs  uv.rs
src/engine/network/: components.rs  mod.rs
