[package]
name = "sfps"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.33.3"
glam = "0.32.0"
glow = "0.16.0"
gltf = "1.4.1"
hecs = "0.11.0"
kira = "0.12.0"
legion = "0.4.0"
physx = "0.19.0"
shipyard = "0.11.2"
#wgpu = "28.0.0"
winit = "0.30.13"
eframe = "0.33.3"
egui_glow = "0.33.3"
env_logger = "0.11.9"
bevy = "0.18.1"
bevy_asset_loader = "0.25.0"
bevy_egui = "0.39.1"
bevy_ui = "0.18.1"
#naga = "28.0.0"
termcolor = "1.4.1"
bevy_rapier3d = "0.33.0"
bevy_replicon = "0.39.1"
bevy_renet = "4.0.1"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
